scripts/nullaway/annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8.txt
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return title;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return startTime;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:37: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return endTime;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/TVParserHandler.java:21: error: [NullAway] initializer method does not guarantee @NonNull field currentEvent (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TVParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/DukeCalParserHandler.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 15), currentCalendar (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DukeCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/NFLCalParserHandler.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 14), currentCalendar (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NFLCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/DukeBasketballCalHandler.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 14), currentDate (line 16), currentTime (line 17), currentCalendar (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DukeBasketballCalHandler ()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/GoogleCalParserHandler.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 17), startCalendar (line 18), endCalendar (line 19), recurringTime (line 68) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public GoogleCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/filtering/Filter.java:21: error: [NullAway] dereferenced expression event.getDescription() is @Nullable
			if (event.getDescription().contains(keyword)
			                          ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/CalendarParser.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
